Update CI build script